Fixed bug in connection, fixed bug in form parsing, disabled preview features